# idiolect

./: .gitignore  Dockerfile  Makefile  README.md  idiolect-key.pem  pyproject.toml
.github/workflows/: ci.yml
artifacts/tokenizer/: tokenizer.json
artifiacts/tokenizer/: config.json
codeforge/: __init__.py
codeforge/data/: __init__.py  dataloader.py  tokenizer.py
codeforge/evaluation/: __init__.py  style_analyzer.py
codeforge/model/: __init__.py  attention.py  config.py  lora.py  transformer.py
codeforge/serving/: __init__.py  app.py
codeforge/training/: __init__.py  distributed.py  trainer.py
configs/: finetune.yaml  pretrain.yaml  serve.yaml
frontend/: app.js  index.html  style.css  vercel.json
scripts/: colab_pretrain.py  debug_local.py  finetune_lora.py  kaggle_tokenizer.py
