[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codeforge"
version = "0.1.0"
description = "Pre-train and fine-tune a code LLM to write in your personal coding style"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Zhang Hao", email = "zhanghao@example.com"},
]
keywords = ["machine-learning", "llm", "code-generation", "transformer", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "tokenizers>=0.19.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "wandb>=0.16.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "boto3>=1.34.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "httpx>=0.27.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/codeforge"
Repository = "https://github.com/YOUR_USERNAME/codeforge"
Documentation = "https://github.com/YOUR_USERNAME/codeforge/docs"

[tool.setuptools.packages.find]
include = ["codeforge*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
